--- a/components/IndexPageLayout/ImageCard/imageCard.less
+++ b/components/IndexPageLayout/ImageCard/imageCard.less
@@ -1,3 +1,16 @@
 .card {
-  border: 1px solid #fbfbfb;
+  list-style-type: none;
+  padding: 20px;
+  border: 1px solid grey;
+}
+
+.content {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.likes {
+  display: flex;
+  flex-flow: row nowrap;
 }
