feat(components): add some creepy styles on card
-meta: cards-list-page

--- a/components/IndexPageLayout/ImageCard/imageCard.less
+++ b/components/IndexPageLayout/ImageCard/imageCard.less
@@ -1,7 +1,6 @@
 .card {
   list-style-type: none;
-  padding: 20px;
-  border: 1px solid grey;
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
 .content {
@@ -10,7 +9,28 @@
   justify-content: space-between;
 }
 
+.info {
+  padding: 25px;
+}
+
+.name {
+  font-size: 23px;
+  line-height: 20px;
+}
+
 .likes {
   display: flex;
   flex-flow: row nowrap;
+  padding-top: 24px;
+}
+
+.imageBlock {
+  max-height: 200px;
+  max-width: 300px;
+}
+
+.image {
+  height: 100%;
+  width: 100%;
+  background-size: cover;
 }
