--- a/components/Less/global.critical.less
+++ b/components/Less/global.critical.less
@@ -9,6 +9,7 @@ html, body, #__next {
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
+  font-family: Roboto, Arial, Helvetica, sans-serif;
 }
 
 a {
