feat(product): add global styles and finish card
-meta: cards-list-page

--- a/components/IndexPageLayout/ImageCard/Likes/likes.less
+++ b/components/IndexPageLayout/ImageCard/Likes/likes.less
@@ -1,5 +1,14 @@
 .likes {
   display: flex;
   flex-flow: row nowrap;
+  align-items: center;
   padding-top: 24px;
+}
+
+.break {
+  padding-right: 5px;
+}
+
+.likesNumber {
+  font-weight: bold;
 }
