--- a/components/Less/variables.less
+++ b/components/Less/variables.less
@@ -1,10 +1,15 @@
+// stylelint-disable property-no-unknown
 // Сюда добавляем глобальные less переменные. Такие как цвета и размеры.
 // Групировать переменные по блокам.
 // НЕ ИМПОРТИРУЙТЕ ЭТОТ ФАИЛ В ДРУГИЕ LESS, ИМПОРТИРУЙТЕ global.less
 
 /** COLORS */
 
-@main-blue: blue;
+@dribbble-pink: #ea4c89;
+
+@all-colors: {
+  dribbble-pink: @dribbble-pink;
+}
 
 /** COLORS END */
 
