--- a/components/IndexPageLayout/ImageCard/imageCard.less
+++ b/components/IndexPageLayout/ImageCard/imageCard.less
@@ -1,6 +1,13 @@
+.listItem {
+  list-style: none;
+}
+
 .card {
-  list-style-type: none;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.fakeHeight {
+  height: 200px;
 }
 
 .content {
@@ -20,5 +27,6 @@
 
 .image {
   height: 100%;
-  background-size: cover;
+  width: 100%;
+  object-fit: cover;
 }
