feat(components): change styles
- add grey background
- remove card shadow
- fix height of every card on 150px
- meta: pagination

--- a/components/IndexPageLayout/ImageCard/imageCard.less
+++ b/components/IndexPageLayout/ImageCard/imageCard.less
@@ -3,14 +3,16 @@
 }
 
 .card {
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  height: 150px;
+  background-color: white;
 }
 
 .fakeHeight {
-  height: 200px;
+  height: 150px;
 }
 
 .content {
+  height: 100%;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
@@ -21,7 +23,7 @@
 }
 
 .imageBlock {
-  max-height: 200px;
+  height: 100%;
   max-width: 300px;
 }
 
