--- a/components/Less/global.critical.less
+++ b/components/Less/global.critical.less
@@ -10,6 +10,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   font-family: Roboto, Arial, Helvetica, sans-serif;
+  background-color: #f4f4f4;
 }
 
 a {
