--- a/components/IndexPageLayout/ImageCard/imageCard.less
+++ b/components/IndexPageLayout/ImageCard/imageCard.less
@@ -3,7 +3,7 @@
 }
 
 .card {
-  height: 150px;
+  height: 200px;
   background-color: white;
 }
 
@@ -24,7 +24,7 @@
 
 .imageBlock {
   height: 100%;
-  max-width: 300px;
+  flex: 0 0 300px;
 }
 
 .image {
